qtkeychain (0.8.0-1) UNRELEASED; urgency=medium

  * new upstream release.
  * Updated copyright information.
  * Add new build dependencies (pkg-config and libsecret-1).
  * Add patch: fix-qt4-build.patch:
    - Make Qt4 builds successfull again.

 -- Sandro Knauß <hefee@debian.org>  Sat, 10 Jun 2017 15:12:54 +0200

qtkeychain (0.7.0-3) unstable; urgency=medium

  * Added Breaks and Replaces for Qt4 and Qt5 version.
    Thanks to Alf Gaida (Closes: #842416)

 -- Sandro Knauß <hefee@debian.org>  Sat, 29 Oct 2016 00:37:41 +0200

qtkeychain (0.7.0-2) unstable; urgency=medium

  * Upload to unstable to start transition.
  * Update my mail address to debian.org address

 -- Sandro Knauß <hefee@debian.org>  Fri, 28 Oct 2016 13:29:23 +0200

qtkeychain (0.7.0-1) experimental; urgency=medium

  * New upstream release
  * Bump Standards-Version (no changes needed)
  * Bump SONAME and packagename, because of ABI breakage.
  * Securify uris to debian git.

 -- Sandro Knauß <hefee@debian.org>  Sat, 22 Oct 2016 01:03:37 +0200

qtkeychain (0.5.0-1) unstable; urgency=medium

  * New upstream release
  * Updated d/watch file
  * Updated d/copyright with current year
  * Make buildable with GCC-5 (Closes: #778089)
  * Bumped Standards-Version: No changes needed

 -- Sandro Knauß <hefee@debian.org>  Mon, 01 Jun 2015 22:41:45 +0200

qtkeychain (0.4.0-1) unstable; urgency=medium

  * New upstream release:
    - Improved desktop environment detection at runtime (Closes: #755349)
  * Replaced hardening-wrapper with dpkg-buildflags
  * Bumped compat to 9 to have dpkg-buildflags available
  * Removed private symbols from libs

 -- Sandro Knauß <hefee@debian.org>  Thu, 04 Sep 2014 17:30:43 +0200

qtkeychain (0.3.0-2) unstable; urgency=medium

  * Building lib for qt4 and qt5.
  * Added packages libqt5keychain0 and qt5keychain-dev
  * Added symbols for libqt5keychain0

 -- Sandro Knauß <hefee@debian.org>  Tue, 01 Apr 2014 12:54:47 +0200

qtkeychain (0.3.0-1) unstable; urgency=medium
