@@ -5,6 +5,7 @@ qtkeychain (0.8.0-1) UNRELEASED; urgency=medium
   * Add new build dependencies (pkg-config and libsecret-1).
   * Add patch: fix-qt4-build.patch:
     - Make Qt4 builds successfull again.
+  * Switch to Qt5 as default build.
 
  -- Sandro Knauß <hefee@debian.org>  Sat, 10 Jun 2017 15:12:54 +0200
 
